--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
         </ul>
         То я жду ваше CV на английском на почту <a href="mailto:traktor.pledik@gmail.com">traktor.pledik@gmail.com</a>
     </h2>
+    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-69573811-8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-69573811-8');
+</script>
+
 </body>
 </html>
