--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
             <li>Желание переехать в Нидерланды</li>
             <li>Разговорный английский</li>
         </ul>
-        То я жду ваше CV на английском на почту <a href="mailto:traktor.pledik@gmail.com">traktor.pledik@gmail.com</a>
+
+        <b>
+          Речь только про IT<br/>
+          Программисты, разработчики, devOPS, QA, Data Science - все инжинеры. <br/>Не менеджеры<br/>
+        </b>
+
+        <br/>
+        <br/>
+
+        Жду ваше CV на английском на почту <a href="mailto:traktor.pledik@gmail.com">traktor.pledik@gmail.com</a>
     </h2>
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
