--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <b>
           Речь только про IT<br/>
-          Программисты, разработчики, devOPS, QA, Data Science - все инжинеры. <br/>Не менеджеры<br/>
+          Программисты, разработчики, devOPS, QA, Data Science - все инженеры. <br/>Не менеджеры<br/>
         </b>
 
         <br/>
